bat.bool1.monkeytrouble.MonkeyTrouble.scala.error
Compilation error:
MonkeyTrouble:15: error: Unmatched closing brace '}' ignored here
}
^